# synthesizer

./: Cargo.toml  build.sh
include/: Synthesizer.hpp  Voice.hpp
src/: Synthesizer.cpp  Voice.cpp  main.cpp  main.rs  midi_manager.rs
src/synthesizer/: mod.rs  voice.rs
